--- a/Agenda v2/app/src/main/res/values/styles.xml
+++ b/Agenda v2/app/src/main/res/values/styles.xml
@@ -14,4 +14,13 @@
         <item name="popupTheme">@style/ThemeOverlay.AppCompat.Light</item>
     </style>
 
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary2</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark2</item>
+        <item name="colorAccent">@color/colorAccent2</item>
+    </style>
+
+    <style name="Theme.ConNavigationDrawer" parent="AppTheme"/>
+
 </resources>
