--- a/Agenda v2/app/src/main/res/layout/login_fragment.xml
+++ b/Agenda v2/app/src/main/res/layout/login_fragment.xml
@@ -21,18 +21,26 @@
             android:layout_width="64dp"
             android:layout_height="64dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="48dp"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="16dp"
-            app:srcCompat="@drawable/logo"/>
+            app:srcCompat="@drawable/vwlogo2"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="132dp"
+            android:layout_marginBottom="10dp"
             android:text="@string/shr_app_name"
             android:textAllCaps="true"
             android:textSize="16sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:text="@string/login_session"
+            android:textSize="16sp"
+            />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/username_text_input"
@@ -53,7 +61,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/shr_hint_password"
-            app:errorEnabled="true">>
+            app:errorEnabled="true">
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/password_edit_text"
@@ -86,7 +94,9 @@
                 android:text="@string/shr_button_cancel" />
 
         </RelativeLayout>
-        <!-- Snippet from "Add text fields" section goes here. -->
+        <!-- Snippet from "Add text fields" section goes here.
+
+        -->
 
         <!-- Snippet from "Add buttons" section goes here. -->
 
