--- a/Agenda v2/app/src/main/res/menu/navigation_menu.xml
+++ b/Agenda v2/app/src/main/res/menu/navigation_menu.xml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/account"
-        android:title="@string/profile"/>
-    <item android:id="@+id/settings"
-        android:title="@string/settings"/>
-    <item android:id="@+id/mycart"
-        android:title="@string/cart"/>
+    <item android:id="@+id/Help2"
+        android:title="@string/help"/>
 </menu>
