--- a/Agenda v2/app/src/main/res/menu/toolbar.xml
+++ b/Agenda v2/app/src/main/res/menu/toolbar.xml
@@ -5,6 +5,8 @@
         android:id="@+id/search"
         android:icon="@drawable/search"
         android:title="@string/shr_search_title"
-        app:showAsAction="always" />
+        android:orderInCategory="100"
+        app:showAsAction="always|collapseActionView"
+        app:actionViewClass="android.support.v7.widget.SearchView"/>
 
 </menu>
