--- a/Agenda v2/app/src/main/res/values/colors.xml
+++ b/Agenda v2/app/src/main/res/values/colors.xml
@@ -6,4 +6,10 @@
     <color name="toolbarIconColor">#FFFFFF</color>
     <color name="loginPageBackgroundColor">#FFFFFF</color>
     <color name="backgroundColor">#1565C0</color>
+    <color name="colorPrimary2">#3F51B5</color>
+    <color name="colorPrimaryDark2">#303F9F</color>
+    <color name="colorAccent2">#5f77ff</color>
+    <color name="colorSeparador">#9E9E9E</color>
+    <color name="colorBackgroundProfile">#2b80bc</color>
+    <color name="colorBackgroundData">#f4f4f4</color>
 </resources>
