--- a/Agenda v2/app/src/main/res/values/colors.xml
+++ b/Agenda v2/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#E0E0E0</color>
+    <color name="colorWhite">#FFFFFF</color>
     <color name="colorPrimaryDark">#DADCE0</color>
     <color name="colorAccent">#0d47a1</color>
     <color name="toolbarIconColor">#FFFFFF</color>
