--- a/Agenda v2/app/src/main/res/layout/activity_inicio.xml
+++ b/Agenda v2/app/src/main/res/layout/activity_inicio.xml
@@ -16,7 +16,7 @@
             android:id="@+id/appbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:theme="@style/Theme.App">
+            android:theme="@style/Theme.Toolbar">
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
