--- a/Agenda v2/app/src/main/res/layout/activity_profile_scroll.xml
+++ b/Agenda v2/app/src/main/res/layout/activity_profile_scroll.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="258dp"
         android:fitsSystemWindows="true"
-        android:theme="@style/Theme.App"
+        android:theme="@style/Theme.Toolbar"
         >
 
         <android.support.design.widget.CollapsingToolbarLayout
