--- a/Agenda v2/app/src/main/res/layout/login_fragment.xml
+++ b/Agenda v2/app/src/main/res/layout/login_fragment.xml
@@ -34,14 +34,6 @@
             android:textAllCaps="true"
             android:textSize="16sp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:text="@string/login_session"
-            android:textSize="16sp"
-            />
-
         <android.support.design.widget.TextInputLayout
             android:id="@+id/username_text_input"
             android:layout_width="match_parent"
@@ -75,23 +67,24 @@
             android:layout_height="wrap_content">
 
             <android.support.design.button.MaterialButton
+                android:id="@+id/forgot_button"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_centerHorizontal="true"
+                android:text="@string/forgot_psw" />
+
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <android.support.design.button.MaterialButton
                 android:id="@+id/next_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
                 android:text="@string/shr_button_next" />
-
-            <android.support.design.button.MaterialButton
-                android:id="@+id/cancel_button"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="12dp"
-                android:layout_marginRight="12dp"
-                android:layout_toStartOf="@id/next_button"
-                android:layout_toLeftOf="@id/next_button"
-                android:text="@string/shr_button_cancel" />
 
         </RelativeLayout>
         <!-- Snippet from "Add text fields" section goes here.
