--- a/Agenda v2/app/src/main/res/values/styles.xml
+++ b/Agenda v2/app/src/main/res/values/styles.xml
@@ -6,6 +6,15 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/backgroundColor</item>
         <item name="colorAccent">@color/colorAccent</item>
+       <!-- <item name="android:textColorPrimary">@color/colorWhite</item>-->
+        <item name="colorControlNormal">@color/toolbarIconColor</item>
+    </style>
+
+    <style name="Theme.Toolbar" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/backgroundColor</item>
+        <item name="colorAccent">@color/colorAccent</item>
         <item name="android:textColorPrimary">@color/colorWhite</item>
         <item name="colorControlNormal">@color/toolbarIconColor</item>
     </style>
