--- a/Agenda v2/app/src/main/res/layout/activity_inicio.xml
+++ b/Agenda v2/app/src/main/res/layout/activity_inicio.xml
@@ -21,7 +21,7 @@
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_height="?android:attr/actionBarSize"
                 style="@style/Widget.Shrine.Toolbar"
                 app:layout_scrollFlags="scroll|enterAlways|snap"/>
         </android.support.design.widget.AppBarLayout>
